fix WEBMIS-375: возможно создать лаб.исследования без начатого движения.